# haard-old

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  todo.txt
generators/: gen_binop.cc  gen_unary.cc
samples/: bug0.hd  class0.hd  cpp0.hd  cpp1.hd  cpp2.hd  cpp3.hd  cpp4.hd  cpp5.hd  cpp6.hd  cpp7.hd  cpp8.hd  cpp9.hd  do.hd  err0.hd  err2.hd  error1.hd  error3.hd  error4.hd  error5.hd  error6.hd  hello.hd  hivek-vm.hd  if.hd  indirection.hd  ir0.hd  ir1.hd  ir2.hd  irp0.hd  irp1.hd  irp10.hd  irp11.hd  irp12.hd  irp13.hd  irp14.hd  irp15.hd  irp16.hd  irp17.hd  irp2.hd  irp3.hd  irp4.hd  (+39 more)
samples/stdlib/std/: cstring.hd  file.hd  io.hd  string.hd
src/: main.cc
src/ast/: address_of.cc  annotation.cc  array.cc  array_list_type.cc  arrow.cc  assignment.cc  ast_node.cc  binary_operator.cc  binop.cc  bitwise_and.cc  bitwise_and_assignment.cc  bitwise_not.cc  bitwise_not_assignment.cc  bitwise_or.cc  bitwise_or_assignment.cc  bitwise_xor.cc  bitwise_xor_assignment.cc  branch_statement.cc  call.cc  cast.cc  cast_expression.cc  class.cc  compound_statement.cc  compound_type_descriptor.cc  data.cc  data_field.cc  data_field_single.cc  declaration.cc  delete.cc  delete_array.cc  dereference.cc  division.cc  division_assignment.cc  dot.cc  elif.cc  else.cc  enum.cc  equal.cc  exclusive_range.cc  expression.cc  (+85 more)
src/driver/: driver.cc
src/include/: defs.h
src/include/ast/: address_of.h  annotation.h  array.h  array_list_type.h  arrow.h  assignment.h  ast.h  ast_node.h  binary_operator.h  binop.h  bitwise_and.h  bitwise_and_assignment.h  bitwise_not.h  bitwise_not_assignment.h  bitwise_or.h  bitwise_or_assignment.h  bitwise_xor.h  bitwise_xor_assignment.h  branch_statement.h  call.h  cast.h  cast_expression.h  class.h  compound_statement.h  compound_type_descriptor.h  data.h  data_field.h  data_field_single.h  declaration.h  delete.h  delete_array.h  dereference.h  division.h  division_assignment.h  dot.h  elif.h  else.h  enum.h  equal.h  exclusive_range.h  (+86 more)
src/include/driver/: driver.h
src/include/ir/: ir.h  ir_alloca.h  ir_bin.h  ir_branch.h  ir_builder.h  ir_call.h  ir_context.h  ir_function.h  ir_label.h  ir_memory.h  ir_module.h  ir_modules.h  ir_unary.h  ir_value.h
src/include/log/: actions.h  error_messages.h  errors.h  info_messages.h  infos.h  log.h  log_messages.h  logger.h  messages.h  utils.h
src/include/parser/: parser.h
src/include/printer/: cpp_printer.h  ir_cpp_printer.h  ir_printer.h  printer.h
src/include/scanner/: scanner.h
src/include/scope/: class_scope_builder.h  old_scope_builder.h  scope.h  scope_builder.h  scope_definition_builder.h  symbol.h  symbol_descriptor.h
src/include/semantic/: assignment_scope_builder.h  class_declarer.h  compound_statement_scope_builder.h  data_declarer.h  equal_scope_builder.h  expression_scope_builder.h  expression_statement_scope_builder.h  function_declaration_scope_builder.h  function_scope_builder.h  identifier_scope_builder.h  minus_scope_builder.h  module_declaration_scope_builder.h  module_functions_builder.h  module_functions_definer.h  module_methods_definer.h  module_scope_builder.h  module_types_definer.h  modules_scope_builder.h  not_equal_scope_builder.h  plus_scope_builder.h  scope_builder.h  scope_builder_context.h  semantic_driver.h  semantic_first_pass.h  semantic_pass.h  semantic_second_pass.h  statement_scope_builder.h  type_descriptor_linker.h
src/include/symtab/: symbol.h  symbol_table.h  symbol_table_builder.h
src/include/token/: token.h
src/include/utils/: string_pool.h  utils.h
src/include/vm/: irvm.h  irvm_context.h
src/ir/: ir.cc  ir_alloca.cc  ir_bin.cc  ir_branch.cc  ir_builder.cc  ir_call.cc  ir_context.cc  ir_function.cc  ir_label.cc  ir_memory.cc  ir_module.cc  ir_modules.cc  ir_unary.cc  ir_value.cc
src/log/: actions.cc  error_messages.cc  errors.cc  info_messages.cc  infos.cc  log.cc  log_messages.cc  logger.cc  messages.cc  utils.cc
src/parser/: parser.cc
src/printer/: cpp_printer.cc  ir_cpp_printer.cc  ir_printer.cc  printer.cc
src/scanner/: scanner.cc
src/scope/: old_scope_builder.cc  scope.cc  scope_builder.cc  scope_definition_builder.cc  symbol.cc  symbol_descriptor.cc
src/semantic/: assignment_scope_builder.cc  class_declarer.cc  compound_statement_scope_builder.cc  data_declarer.cc  equal_scope_builder.cc  expression_scope_builder.cc  expression_statement_scope_builder.cc  function_declaration_scope_builder.cc  function_scope_builder.cc  identifier_scope_builder.cc  minus_scope_builder.cc  module_declaration_scope_builder.cc  module_functions_builder.cc  module_functions_definer.cc  module_methods_definer.cc  module_scope_builder.cc  module_types_definer.cc  modules_scope_builder.cc  not_equal_scope_builder.cc  plus_scope_builder.cc  scope_builder.cc  scope_builder_context.cc  semantic_driver.cc  semantic_first_pass.cc  semantic_pass.cc  semantic_second_pass.cc  statement_scope_builder.cc  type_descriptor_linker.cc
src/symtab/: symbol.cc  symbol_table.cc  symbol_table_builder.cc
src/token/: token.cc
src/utils/: string_pool.cc  utils.cc
src/vm/: irvm.cc  irvm_context.cc
std/: cstring.hd.bak  io.hd  io.hd.bak  memory.hd  string.hd  syscall.hd
tests/cpp/: t0.hd  t1.hd
tests/errors/: run.sh
tests/errors/elif_condition/: expected.txt  main.hd
tests/errors/while_condition/: expected.txt  main.hd
tests/ir/: class0.hd  class1.hd  compile.sh  hello.hd  if0.hd  ir0.hd  string0.hd  struct0.hd  t0.hd  t00.hd  while0.hd
tests/pretty_printer/: f.hd  o.txt  old.hd  t0.hd  t1.hd  t2.hd
tests/pretty_printer/assignment/: expected.txt
tests/pretty_printer/bitwise_and/: expected.txt  main.hd
tests/pretty_printer/bitwise_or/: expected.txt  main.hd
tests/pretty_printer/bitwise_xor/: expected.txt  main.hd
tests/pretty_printer/delete/: expected.txt  main.hd
tests/pretty_printer/division/: expected.txt  (+1 more)
tests/samples/: expected.txt  out.txt  run.sh
tests/semantic/: f1.hd  semantic0.hd  semantic1.hd  semantic2.hd  semantic3.hd  semantic4.hd  semantic5.hd  semantic6.hd
vim/: README.md  hd.vim  hd.vim.detect  hd.vim.syntax  install.sh
(+64 files in other folders)
